# OSB

./: CMakeLists.txt  CMakePresets.json  ConfirmationDialog.qml  CountDown.qml  CustomButton.qml  DoubleSpinBox.qml  ErrorDialog.qml  Flash.qml  Gallery.qml  Main.qml  PhotoViewer.qml  README.md  Settings.qml  ShutterButton.qml  cups_printer.cpp  cups_printer.hpp  gstreamerpipeline.cpp  gstreamerpipeline.h  main.cpp  pictureutils.cpp  pictureutils.h  printer.hpp  resources.qrc  settingsmanager.cpp  settingsmanager.h
.github/workflows/: build.yml
OpenSnapBooth/: CMakeLists.txt  Main.qml  main.cpp
